<resources>
    <string name="app_name">Bluely</string>
    <string name="title_activity_login">LoginActivity</string>


    <string name="facebook_app_id">174392501112144</string>
    <string name="fb_login_protocol_scheme">fb174392501112144</string>


    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->

    <string name="scanning">Scanning</string>
    <string name="done">Save</string>
    <string name="scan">Next</string>
    <string name="cantCrop">Cant crop the image, change the points</string>
    <string name="ok">Ok</string>

    <string name="applying_filter">applying_filter</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="welcome_bdo">Welcome to \nBluely Document Organizer</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="Sign_in">Sign In</string>
    <string name="forgot_pswd_btn_text">Forgot Password?</string>
    <string name="loading">Loading</string>
    <string name="email_valid_erro">Please enter valid email</string>
    <string name="password_valid_erro">Please enter password</string>
    <string name="login_error">Login failed</string>
    <string name="send_code">Send Code</string>
    <string name="app_name_center">Bluely Document \nOrganizer</string>
    <string name="singup_text">New User? Sign Up</string>
    <string name="send_request">Send Request</string>
    <string name="fb_login_btn_text">Sign In with Facebook</string>
    <string name="gplus_login_btn_text">Sign In with Google</string>

    <string name="cance_fb">Facebook login cancelled</string>
    <string name="google_login_erro">Please try again later</string>
    <string name="enter_code">Verification Code</string>
    <string name="confirm_code">Confirm</string>
    <string name="resendCode">Re-send Code</string>
    <string name="verificaion_code_error">Please enter valid code</string>
    <string name="are_you_over_18">Are you over 18?</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="phinenumber">Phone Number</string>
    <string name="zipcode">Zip code</string>
    <string name="license">Care Giving License</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="personal_data">Personal Data</string>
    <string name="save">Save</string>
    <string name="firstname_required">First name is required</string>
    <string name="lastname_required">Last name is required</string>
    <string name="phone_number_required">Phone number is required</string>
    <string name="password_required">Password is required</string>
    <string name="conf_password_required">Confirm password is required</string>
    <string name="password_not_match">Password and confirm password  is not same</string>
    <string name="error">Please try again later</string>
    <string name="error_gif">Error</string>
    <string name="logout">Log out</string>
    <string name="logout_perm">Do you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="profile_image_error">Please select your profile image</string>
    <string name="license_required">"Please select valid license "</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_base">BaseActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="ask_to_close_App">Do you want to close the application?</string>
    <string name="upload_credentials">Uploaded Credentials</string>
    <string name="Email">Email</string>
    <string name="list">List</string>
    <string name="extras">Extras</string>
    <string name="attachment">Attachment</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="enter_credential_page">Enter credential type</string>
    <string name="input_field_required">Please enter value</string>
    <string name="credentials">Credentials</string>
    <string name="expire_credentials">Expired Credentials</string>
    <string name="extra_credentials">Extra Credentials</string>
    <string name="dashboard">Dashboard</string>
    <string name="scan_permission">Permission required to upload file</string>
    <string name="added_credentials">Successfully added</string>
    <string name="choose_expire_title">Choose Expire Date</string>
    <string name="ask_file_expire_title">Do you wan to set expire datetime ?</string>
    <string name="skip">Skip</string>
    <string name="cancel_upload">Cancel</string>
    <string name="profile">Profile</string>
    <string name="share">Share</string>
    <string name="add_photos">Add to photos</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="delete_file">Do you want to delete this credentials?</string>
    <string name="add_to_phtos_sucess">File saved successfully</string>
    <string name="link_copied">Copied</string>
    <string name="file_deleted">Deleted successfully</string>
    <string name="file_deleted_error">File can\'t be delete . please try again later</string>
    <string name="invalid_ocr_content">Please scan valid and high quality file</string>
    <string name="delete_file_credentials">Successfully deleted</string>
    <string name="email_no_content">You don\'t have any credential files</string>
    <string name="edit">Edit</string>
    <string name="edit_option">Choose Option</string>
    <string name="personal">Personal</string>
    <string name="job_training"><![CDATA[Job & trainings]]></string>
    <string name="care_job">Caregiving jobs</string>
    <string name="care_training">Caregiving trainings</string>
    <string name="notset">Not set</string>
    <string name="my_training">My Trainings</string>
    <string name="add_skills">Add Caregiving Skill</string>
    <string name="looking_job_zipcode">Job search in 5miles of ZIP:</string>
    <string name="care_giving_experience">Years of Experience</string>
    <string name="preferred_shift">Preferred Shift</string>
    <string name="desired_pay_to">Desired Pay</string>
    <string name="delete_account">Delete Account</string>
    <string name="take_photo">Take photo</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="use_scanner">Use Scanner</string>
    <string name="do_want_delete_account">Are you sure want to delete this account ?</string>
    <string name="sucess_delete_account">Successfully deleted account</string>
    <string name="error_delete_account">Unable to delete your account, please contact application support team</string>
    <string name="upload_document">Choose document</string>
</resources>